fix phone number text-decoration on iphone

--- a/styles.scss
+++ b/styles.scss
@@ -56,6 +56,10 @@ header {
   }
   }
 }
+small[x-apple-data-detectors].digits {
+  color: lightgrey!important;
+  text-decoration: none !important;
+}
 
 #portrait {
   position: absolute;
